# zorascript

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: build.yaml  dependabot-auto.yaml
clients/www/: .gitignore  LICENSE  README.md  package.json  svelte.config.js  vite.config.ts
clients/www/src/: app.d.ts  app.html  app.postcss
clients/www/src-tauri/: Cargo.toml  tauri.conf.json
clients/www/src-tauri/icons/: icon.icns
clients/www/src/lib/: offlineToast.ts
clients/www/src/lib/components/: ReloadPrompt.svelte
clients/www/src/routes/: +layout.svelte  +page.svelte
libs/zora-rs/: Cargo.toml  README.md
libs/zora-rs/src/: enums.rs  lib.rs
libs/zora-rs/tests/: web.rs
