[workspace]
members = [
	"libs/zora-rs",
	"clients/www/src-tauri"
]
resolver = "2"
package.authors = ["Matt Strapp <matt@mattstrapp.net>"]
package.license = "MIT"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
